--- a/jobet/package.json
+++ b/jobet/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "file-saver": "^2.0.5",
     "next": "13.4.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
@@ -24,7 +25,9 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.2",
     "react-icons": "^4.9.0",
+    "react-pdf": "^7.0.2",
     "react-scroll": "^1.8.9",
+    "react-use-downloader": "^1.2.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
