--- a/jobet/package.json
+++ b/jobet/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.2",
     "react-icons": "^4.9.0",
+    "react-image-gallery": "^1.2.11",
     "react-pdf": "^7.0.2",
     "react-scroll": "^1.8.9",
     "react-use-downloader": "^1.2.4",
@@ -32,6 +33,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/react-image-gallery": "^1.2.0",
     "@types/react-scroll": "^1.8.7"
   }
 }
