--- a/jobet/package.json
+++ b/jobet/package.json
@@ -19,11 +19,11 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "file-saver": "^2.0.5",
-    "next": "13.4.4",
+    "next": "^14.2.3",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.44.2",
     "react-icons": "^4.9.0",
     "react-image-gallery": "^1.2.11",
