projects and resume changed

--- a/jobet/package.json
+++ b/jobet/package.json
@@ -30,6 +30,7 @@
     "react-pdf": "^7.0.2",
     "react-scroll": "^1.8.9",
     "react-use-downloader": "^1.2.4",
+    "sharp": "^0.33.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
